# obs-service-elixir_mix_deps

./: Cargo.toml  README.md  elixir_mix_deps.service
.github/workflows/: rust.yml
src/: errors.rs  main.rs  mix.rs  tarballs.rs
tests/: cli.rs
tests/test_project/: mix.exs
