[package]
name = "obs-service-elixir_mix_deps"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
flate2 = "1.1.2"
tar = "0.4.44"
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
