[package]
name = "obs-service-elixir_mix_deps"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
flate2 = "1.1.4"
tar = "0.4.44"
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
