[package]
name = "obs-service-elixir_mix_deps"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
flate2 = "1.1.9"
tar = "0.4.45"
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
